tests/extensions/enotify/errors/from-mailto.sieve
require "enotify";

# 1: Invalid from address
notify :from "stephan#rename-it.nl" "mailto:stephan@example.com";
